added bower and grunt

--- a/demo/index.html
+++ b/demo/index.html
@@ -5,10 +5,10 @@
 	<title>Tab Switcher Example</title>
 
 	<link rel='stylesheet' type='text/css' media='all' href='demo.css'>
-	<link rel='stylesheet' type='text/css' media='all' href='../okTab.css'>
+	<link rel='stylesheet' type='text/css' media='all' href='../okTab.min.css'>
 
-	<script type='text/javascript' src='../jquery-1.10.2.js'></script>
-	<script type='text/javascript' src='../jquery.okTab.js'></script>
+	<script type='text/javascript' src='jquery.min.js'></script>
+	<script type='text/javascript' src='../jquery.okTab.min.js'></script>
 	<script type='text/javascript'>
 		$(document).ready(function(){
 			$(document).okTab({
