added tabname back to object

--- a/demo/index.html
+++ b/demo/index.html
@@ -23,6 +23,8 @@
 
 <body>
 	<div class="inside">
+	<a data-tabs-link="tab1" href="#3" data-tabname="#3">Tab link</a>
+
 		<div class="secondary-tab-nav" data-tabnav="tab1">
 			<ul>
 				<li><a href="#">Tab 1</a></li>
