--- a/demo/index.html
+++ b/demo/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
 	<meta charset='utf-8' />
-	<title>Tab Switcher Example</title>
+	<title>Tabs</title>
 
 	<link rel='stylesheet' type='text/css' media='all' href='demo.css'>
 	<link rel='stylesheet' type='text/css' media='all' href='../okTab.min.css'>
 
-	<script type='text/javascript' src='jquery.min.js'></script>
+	<script type='text/javascript' src='http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js'></script>
 	<script type='text/javascript' src='../jquery.okTab.min.js'></script>
 	<script type='text/javascript'>
 		$(document).ready(function(){
