simplified name and updated version

--- a/demo/index.html
+++ b/demo/index.html
@@ -5,13 +5,13 @@
 	<title>Tabs</title>
 
 	<link rel='stylesheet' type='text/css' media='all' href='demo.css'>
-	<link rel='stylesheet' type='text/css' media='all' href='../okTab.min.css'>
+	<link rel='stylesheet' type='text/css' media='all' href='../tabs.min.css'>
 
 	<script type='text/javascript' src='http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js'></script>
-	<script type='text/javascript' src='../jquery.okTab.min.js'></script>
+	<script type='text/javascript' src='../jquery.tabs.min.js'></script>
 	<script type='text/javascript'>
 		$(document).ready(function(){
-			$(document).okTab({
+			$.tabs({
 				tabNavClass : 'tab-nav',
 				tabContentClass : 'tab-content',
 				activeClass : 'active',
